# bsp_surgical

./: .gitignore  README.md  pyproject.toml
envs/: bsp.yml
eval/feat_run_0/: results.json
eval/feat_run_1/: results.json
eval/pick_match128_cls/: results.json
eval/pick_p_run_0/: results.json
eval/pick_p_scale15/: results.json
eval/pick_p_scale25/: results.json
eval/pick_run_5_chunk5_fixed/: results.json
eval/reach_448_run_0/: results.json
eval/reach_p_run_0/: results.json
eval/reach_sd_backward/: results.json
eval/reach_sd_none/: results.json
eval/run_0/: results.json
eval/run_1/: results.json
eval/run_2/: results.json
scripts/: build_anchor_bank.py  collect.py  evaluate.py  evaluate_features.py  evaluate_rgbd.py  overnight.sh  precompute_features.py  record_rollout.py  setup_surrol.sh  train_all_sequential.sh  train_bc.py  train_diffusion_subgoal.py  train_dynamics.py  train_phase2.py  train_phase3.py  train_rgbd_dynamics.py  train_subgoal.py  train_viz_decoder.py  train_when_ready.sh  viz_dinov2_attention.py  viz_eval_rollout.py  viz_pipeline.py  viz_reconstructions.py
src/bsp_surgical/data/: __init__.py  collector.py  io.py  trajectory.py
src/bsp_surgical/models/: bc.py  (+10 more)
tests/: test_bc.py  test_dataset.py  test_dynamics.py  test_episode_collector.py  test_feature_dataset.py  test_losses.py  test_perception.py  test_phase2_training.py  test_planner.py  test_segdepth_encoder.py  test_smoke.py  test_subgoal.py  test_subgoal_dataset.py  test_subgoal_diffusion.py  test_trajectory.py  test_trajectory_io.py  test_vae.py  test_viz_decoder.py
(+6 files in other folders)
