[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bsp_surgical"
version = "0.0.0"
description = "Backward latent subgoal planning for surgical robotics"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
    "h5py",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
